	- automagically detect and emit "python(abi) = 2.4" dependencies.
	- popt 1.10.1 to preserve newer.
	- use package color as Obsoletes: color.
	- upgrade to db-4.3.27.
	- revert MAGIC_COMPRESS, real fix is in libmagic (#143782).
	- upgrade to file-4.12 internal.
	- mac os x patches (#131943,#131944,#132924,#132926).
	- mac os x patches (#133611, #133612, #134637).

4.3.3 -> 4.4:
	- pentium3/pentium4 arch support (pluto@PLD).
	- cpuid() cleanups for PIC/non-PIC and gcc 3.4 (pluto@PLD).
	- rpmGlob() is now locale independent (wiget@PLD).
	- conditional build support/unification (jajcus,malekith,qboosh,wiget@PLD).
	- fix: readelf.c breakage on some non x86 arches (qboosh@PLD).
	- find-lang.sh: implemented --with-kde (finds KDE help files);
	- add --all-name option (finds every lang file); drop defattr()
	  from *.lang files (arekm,mkochano,pascalek,wiget@PLD).
	- add type to tag array.
	- add Disttag: syntax to spec file parser and header content.
	- define Suggests:/Enhances: and Priority: tag values.
	- prevent RPMSENSE_PREREQ from being set or tested.
	- python: add rpm.ps() object to carry problem set info.
	- python: permit rpm.ds() analogue to hdr.dsFromHeader() creator.
	- python: permit rpm.fi() analogue to hdr.fiFromHeader() creator.
	- silently add default %defattr(-,root,root) for all packages.
	- fix: don't set handler if SIG_IGN is already set (#134474).
	- disable expensive header+payload verifies in default config.
	- adjust digest/signature stats to count #pkgs and bytes.
	- obsolete Serial:, Copyright:, and RHNPlatform: syntax in spec files.
	- permit Obsoletes: /path/to/file.
	- permit Conflicts: /path/to/file.
	- free rpmrc when looping on --target arches (#127730).
	- fix: handle non-unique dirnames in rpmalAdd().
	- integrate rpmgi "generic iterator" with query/verify.
	- bump popt version to 1.10.
	- attempt dependency tree breadth, take 1.
	- use external libneon for http/https transport.
	- add --delsign to purge packages of digital signatures.