@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.5
+Release: 0.7
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -496,6 +496,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Sun Jan  9 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.7
+- build against external/internal neon.
+
 * Tue Jan  4 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.6
 - mac os x patches (#131943,#131944,#132924,#132926).
 - mac os x patches (#133611, #133612, #134637).
