@@ -829,10 +829,12 @@ static void hexdump(const unsigned char * buf, ssize_t len)
 }
 #endif
 
-static void davAcceptRanges(void * userdata, const char * value)
+static void davAcceptRanges(void * userdata, /*@null@*/ const char * value)
+	/*@modifies userdata @*/
 {
     urlinfo u = userdata;
 
+    if (!(u && value)) return;
 if (_dav_debug < 0)
 fprintf(stderr, "*** u %p Accept-Ranges: %s\n", u, value);
     if (!strcmp(value, "bytes"))
@@ -841,18 +843,23 @@ fprintf(stderr, "*** u %p Accept-Ranges: %s\n", u, value);
 	u->httpHasRange = 0;
 }
 
+#if !defined(HAVE_NEON_NE_GET_RESPONSE_HEADER)
 static void davAllHeaders(void * userdata, const char * value)
 {
     FD_t ctrl = userdata;
 
+    if (!(ctrl && value)) return;
 if (_dav_debug)
 fprintf(stderr, "<- %s\n", value);
 }
+#endif
 
-static void davContentLength(void * userdata, const char * value)
+static void davContentLength(void * userdata, /*@null@*/ const char * value)
+	/*@modifies userdata @*/
 {
     FD_t ctrl = userdata;
 
+    if (!(ctrl && value)) return;
 if (_dav_debug < 0)
 fprintf(stderr, "*** fd %p Content-Length: %s\n", ctrl, value);
 /*@-unrecog@*/
@@ -860,10 +867,12 @@ fprintf(stderr, "*** fd %p Content-Length: %s\n", ctrl, value);
 /*@=unrecog@*/
 }
 
-static void davConnection(void * userdata, const char * value)
+static void davConnection(void * userdata, /*@null@*/ const char * value)
+	/*@modifies userdata @*/
 {
     FD_t ctrl = userdata;
 
+    if (!(ctrl && value)) return;
 if (_dav_debug < 0)
 fprintf(stderr, "*** fd %p Connection: %s\n", ctrl, value);
     if (!strcasecmp(value, "close"))
@@ -917,12 +926,14 @@ assert(ctrl->req != NULL);
 
     ne_set_request_private(ctrl->req, "fd", ctrl);
 
+#if !defined(HAVE_NEON_NE_GET_RESPONSE_HEADER)
     ne_add_response_header_catcher(ctrl->req, davAllHeaders, ctrl);
 
     ne_add_response_header_handler(ctrl->req, "Content-Length",
 		davContentLength, ctrl);
     ne_add_response_header_handler(ctrl->req, "Connection",
 		davConnection, ctrl);
+#endif
 
     if (!strcmp(httpCmd, "PUT")) {
 #ifdef	NOTYET		/* XXX HACK no wr_chunked until libneon supports */
@@ -937,8 +948,10 @@ assert(ctrl->req != NULL);
     } else {
 	/* HACK: possible Last-Modified: Tue, 02 Nov 2004 14:29:36 GMT */
 	/* HACK: possible ETag: "inode-size-mtime" */
+#if !defined(HAVE_NEON_NE_GET_RESPONSE_HEADER)
 	ne_add_response_header_handler(ctrl->req, "Accept-Ranges",
 			davAcceptRanges, u);
+#endif
 	/* HACK: possible Transfer-Encoding: on GET. */
 
 	/* HACK: other errors may need retry too. */
@@ -953,6 +966,16 @@ assert(ctrl->req != NULL);
 
 if (_dav_debug < 0)
 fprintf(stderr, "*** davReq(%p,%s,\"%s\") exit sess %p req %p rc %d\n", ctrl, httpCmd, (httpArg ? httpArg : ""), u->sess, ctrl->req, rc);
+
+#if defined(HAVE_NEON_NE_GET_RESPONSE_HEADER)
+    davContentLength(ctrl,
+		ne_get_response_header(ctrl->req, "Content-Length"));
+    davConnection(ctrl,
+		ne_get_response_header(ctrl->req, "Connection"));
+    if (strcmp(httpCmd, "PUT"))
+	davAcceptRanges(u,
+		ne_get_response_header(ctrl->req, "Accept-Ranges"));
+#endif
 
     ctrl = fdLink(ctrl, "open data (davReq)");
     return 0;
